--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-color: #f0f0f0;
+  background-color: #adcfd3;
 }
 
 .navbar {
@@ -80,6 +80,7 @@ body {
   .nav-right {
     width: 100%;
     text-align: center;
+    margin-left: 20px;
   }
 
   .nav-left a,
@@ -107,38 +108,162 @@ body {
 
 @media only screen and (max-width: 480px) {
   .dropbtn {
-    padding: 12px 16px;
+    padding: 8px 10px;
   }
 
   .dropdown-content {
-    min-width: 140px;
+    min-width: 100px;
   }
 }
 
 .text {
   display: flex;
   flex-wrap: wrap;
-  width: 60%;
+  width: 80%;
   margin: 50px auto;
   height: 50vh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .link {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: aquamarine;
-  height: 50px;
+  background-color: rgb(222, 234, 234);
+  color: black;
+  padding: 10px;
+}
+.checkbox-container,
+.container {
+  width: 80%;
+  margin: 20px auto;
+  padding: 10px;
+}
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-a {
+a[href] {
   text-decoration: none;
 }
-img {
+
+.img1 {
   height: 50px;
-  width: 50pcx;
+  width: 50px;
   border-radius: 10px;
 }
+
 i {
   margin: 2px 2px;
+}
+
+/* .home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  margin: 10px;
+}
+
+@media only screen and (min-width: 769px) {
+  .text,
+  .img {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .text,
+  .img {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    height: 40%;
+    padding: 0px;
+    margin: 0px;
+  }
+} */
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  max-width: 1300px;
+}
+.restaurant-card {
+  background-color: #faf6f6;
+  border-radius: 10px;
+  width: 15rem;
+  margin: 5px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+}
+.restaurant-card img {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.restaurant-card h2 {
+  font-size: 1.2em;
+  margin: 10px 0;
+  text-align: center;
+}
+.restaurant-card p {
+  margin: 10px 0;
+  color: #666;
+  text-align: center;
+}
+.restaurant-card .rating {
+  font-weight: bold;
+  color: #ff9529;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .restaurant-card {
+    width: 90%;
+    margin: 1px 0;
+  }
+}
+
+.carousel-inner {
+  height: 200px;
+  margin: 5px;
+}
+
+.option {
+  display: flex;
+  justify-content: space-around;
+}
+.services {
+  border: 2px solid red;
+  border-radius: 25px;
+  background-color: cornsilk;
+  cursor: pointer;
+  padding: 5px;
+}
+p {
+  text-align: center;
+}
+
+.services:hover {
+  background-color: bisque;
+}
+
+a[href]h3 {
+  color: white;
+}
+.about {
+  text-align: center;
+}
+.contact {
+  text-align: center;
 }
